--- a/sormas-rest/pom.xml
+++ b/sormas-rest/pom.xml
@@ -83,6 +83,13 @@
 			<groupId>org.eclipse.microprofile.config</groupId>
 			<artifactId>microprofile-config-api</artifactId>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.vladmihalcea</groupId>
+    		<artifactId>hibernate-types-52</artifactId>
+    		<version>2.21.1</version> <!-- Use the latest compatible version -->
+		</dependency>
+
 
 	</dependencies>
 
